--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-18">
+    <meta charset="UTF-8">
     <title>Etch-A-Sketch</title>
     <script type="text/javascript" src="./script.js" defer></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <div class="container"></div>
 </body>
 
 </html>
