--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div class="grid"></div>
+        <button class="newGrid">New Grid</button>
     </div>
 </body>
 
