--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <div class="grid"></div>
         <button class="newGrid">New Grid</button>
+        <button class="reset">Reset</button>
     </div>
 </body>
 
