Add some styling to the page.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 
 <body>
     <div class="container">
-        <div class="grid"></div>
-        <button class="newGrid">New Grid</button>
-        <button class="reset">Reset</button>
+    <div class="redBox">
+    <div class="container">
+        <div class="grid">
+            <div class="size">Size</div>
+        </div>
     </div>
+    <div class="containerTwo">
+    <button class="reset">Reset</button>
+    <h1 class ="title">Etch - A - Sketch!</h1> 
+    <button class="newGrid">New Grid</button> </div> </div> </div>
 </body>
 
 </html>
