--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="redBox">
     <div class="container">
         <div class="grid">
-            <div class="size">Size</div>
+            <div class="size"></div>
         </div>
     </div>
     <div class="containerTwo">
